feat(openAPI): Authentication;
Added auth API;
